--- a/BlazorTool.Client/Pages/Changelogpage.razor.css
+++ b/BlazorTool.Client/Pages/Changelogpage.razor.css
@@ -11,11 +11,11 @@
 }
 
 .full-width-container {
-    width: 90vw; /* Занимает всю ширину окна просмотра */
+    width: 99%; /* Занимает всю ширину окна просмотра */
     height: 90vh; /* Занимает всю высоту окна просмотра */
     display: flex;
     align-items: stretch; /* Растягивает дочерние элементы по высоте */
-    
+    overflow-y: scroll;
 }
 
 pre {
